--- a/document/src/doc/java/分布式中间件.md
+++ b/document/src/doc/java/分布式中间件.md
@@ -1,8 +1,15 @@
 
 ## cap理论
 
-
+https://blog.csdn.net/suifeng3051/article/details/48053965
 ## kafka
+基于push-subscribe的分布式消息系统。应用在消息系统、日志收集、数据采集分发、流式处理等场景。
+高吞吐量、低延迟：kafka每秒可以处理几十万条消息，它的延迟最低只有几毫秒
+可扩展性：kafka集群支持热扩展
+持久性、可靠性：消息被持久化到本地磁盘，并且支持数据备份防止数据丢失
+容错性：允许集群中节点失败（若副本数量为n,则允许n-1个节点失败）
+高并发：支持数千个客户端同时读写
+
 partition：每个主题可以分为多个partition，每个partition实际存储为append log；每条消息根据时间顺序分配一个单调递增的offset，以日志的形式顺序追加到文件尾部；由生产者决定消息发送到哪个partition。
 https://blog.csdn.net/lingbo229/article/details/80761778
 https://www.jianshu.com/p/aa4c6994687e
