--- a/document/src/doc/java/分布式中间件.md
+++ b/document/src/doc/java/分布式中间件.md
@@ -10,6 +10,17 @@ https://blog.csdn.net/suifeng3051/article/details/48053965
 容错性：允许集群中节点失败（若副本数量为n,则允许n-1个节点失败）
 高并发：支持数千个客户端同时读写
 
+Replications数据持久化副本数量，至少为2。只有一个partition的副本会被选举成leader作为读写用。
+Partition：Kafka中的topic是以partition的形式存放的，数据实际存储在log文件。Partition的数量决定了topic log的数量
+一个partition只能被一个消费者消费，一个消费者可以消费多个partition。partitions >  consumers
+
+Producers客户端设置key自己控制着消息被推送到哪些partition。支持批量发送、异步发送、结果future、acks确认副本数、
+Consumers通过offset来决定读取哪条数据，通过提交offset表示消费完成的位置。
+
+压缩：消息头部添加了一个描述压缩属性字节，GZIP或Snappy格式对消息集合进行压缩。Producer端进行压缩之后，在Consumer端需进行解压。
+可靠性：通过acks参数确保生产者写入成功，消费者根据offset读取和提交消息位置，保证消费成功。
+备份：提高了Kafka集群的可靠性、稳定性、容错性。备份数量为n的集群允许n-1个节点失败。
+
 partition：每个主题可以分为多个partition，每个partition实际存储为append log；每条消息根据时间顺序分配一个单调递增的offset，以日志的形式顺序追加到文件尾部；由生产者决定消息发送到哪个partition。
 https://blog.csdn.net/lingbo229/article/details/80761778
 https://www.jianshu.com/p/aa4c6994687e
