--- a/document/src/doc/java/分布式中间件.md
+++ b/document/src/doc/java/分布式中间件.md
@@ -41,6 +41,10 @@ Memory Mapped Files内存文件映射：直接利用操作系统的Page来实现
 消息回溯：RocketMQ支持按时间回溯；kafka支持offset回溯；
 消费并行度：RocketMQ因为在broker保存offset，不限制consumer数量；kafka一个partition只能被一个consumer消费  
 
+### 选型
+https://www.cnblogs.com/javazhiyin/p/13327925.html
+RocketMQ：功能丰富（分区数量、事务消息、失败重试、延迟消息、回溯、不限制消费者数量），毫秒级响应；适合在线业务场景
+kafka：大数据日志场景功能丰富、兼容性好、性能高；适合日志、大数据场景。
 
 ## zookeeper
 zookeeper：高可用、高性能、强一致性的分布式开源协调服务。适合同步服务、配置维护和集群命名和管理。
