--- a/document/src/doc/java/分布式中间件.md
+++ b/document/src/doc/java/分布式中间件.md
@@ -30,21 +30,45 @@ Memory Mapped Files内存文件映射：直接利用操作系统的Page来实现
 批量：Producer批量发送消息集合；server端是以消息块的形式追加消息到log中；consumer在查询的时候也是一次查询大量的线性数据块。  
 零拷贝：依赖操作系统提供的零拷贝sendfile机制，实现操作系统页面缓存和socket之间的数据传递。  
 
+https://blog.csdn.net/dingshuo168/article/details/102970988
+https://www.wwwbuild.net/huangtalkit/23928.html
+## RocketMQ
 ### 对比RocketMQ
 数据可靠性：kafka支持主从自动切换，RocketMQ不支持Master宕机Slave自动切换；  
 性能：kafka写入百万级，RocketMQ十万级；kafka producer批量提交消息  
 
-分区数量：kafka支持不超过64，影响性能，RocketMQ不影响性能；  kafka每个topic partition对应一个文件，RocketMQ所有消息写入一个commitLog文件；
-事务：RocketMQ支持事务，kafka不支持；  
-重试：RocketMQ有失败队列和死信队列，支持失败重试机制；kafka不支持
+分区数量：kafka支持不超过64，影响性能，RocketMQ不影响性能；kafka每个topic partition对应一个文件，RocketMQ所有消息写入一个commitLog文件；
+### 顺序：
+producer：客户端在发送的时候使用单线程，根据queue选择器和排序id，把有顺序关系的消息都发送到同一个queue上。
+broker：客户端采用同步发送消息，broker收到消息后，顺序写入commitLog文件，保证消息在文件中是有序。
+consumer：1.同一个queue只允许一个consumer消费；2.消息到达consumer后回被放进缓存队列，consumer增加了互斥锁，同一时间同一个queue只会有一个线程在处理；
+3.consumer线程处理超时或失败时，该consumer会一直重试处理，直到超过最大次数，然后返还broker，broker直接把消息放死信队列，而不是重试队列。
+问题：1.消息分配不均，导致消息堆积；2.broker宕机需要切换queue时，如果原consumer有消息对接，可能后发送的消息被先消费了。  
+### 事务：RocketMQ支持事务，kafka不支持； 
+ producer发送带有唯一key的事务消息，Broker保存到预提交队列，consumer不可见。返回事务结果给producer；
+ producer执行本地事务，根据情况想broker发送commit或rollback；
+ broker收到commit指令，则根据消息key从预提交队列移除消息，重新正式写入commitLog。收到rollback指令，则从预提交队列移除消息。
+ broker重试未收到producer指令，会定时重试调用Producer.checkLocalTransaction，根据producer的事务状态决定commit或rollback。
+
+### 重试：RocketMQ有重试队列和死信队列，支持失败重试机制；kafka不支持
+延时消息：1.producer修改topic名称以及队列信息（根据延时级别决定发送到哪个级别的延时队列（18个level））；2.根据队列信息，转发到对应的延时Queue；3.延时服务后台线程消费延时Queue里的消息，改回真实的TOPIC；4.重新提交消息，写入commitLog；5. 把消息投递到对应的consumer Queue；  
+
 消息查询：RocketMQ支持根据key查询消息内容，kafka不支持
 消息回溯：RocketMQ支持按时间回溯；kafka支持offset回溯；
-消费并行度：RocketMQ因为在broker保存offset，不限制consumer数量；kafka一个partition只能被一个consumer消费  
 
 ### 选型
-https://www.cnblogs.com/javazhiyin/p/13327925.html
+1. 功能维度
+延迟消息；顺序消息；事务消息；重试队列；死信队列；消费模式（集群、广播）；消息回溯；幂等性（At most once、At least once）
+2.性能维度
+吞吐量；时延
+3.可靠性
+消息丢失（ack）；故障恢复；集群规模；社区活跃
+4.运维管理
+安全、权限、监控、告警、容灾、多机房
+5.生态
+
 RocketMQ：功能丰富（分区数量、事务消息、失败重试、延迟消息、回溯、不限制消费者数量），毫秒级响应；适合在线业务场景
-kafka：大数据日志场景功能丰富、兼容性好、性能高；适合日志、大数据场景。
+kafka：大数据日志场景功能丰富、兼容性好、性能高；适合日志、流式处理、大数据场景。
 
 ## zookeeper
 zookeeper：高可用、高性能、强一致性的分布式开源协调服务。适合同步服务、配置维护和集群命名和管理。
