--- a/document/src/doc/java/分布式中间件.md
+++ b/document/src/doc/java/分布式中间件.md
@@ -33,12 +33,7 @@ Memory Mapped Files内存文件映射：直接利用操作系统的Page来实现
 https://blog.csdn.net/dingshuo168/article/details/102970988
 https://www.wwwbuild.net/huangtalkit/23928.html
 ## RocketMQ
-### 对比RocketMQ
-数据可靠性：kafka支持主从自动切换，RocketMQ不支持Master宕机Slave自动切换；  
-性能：kafka写入百万级，RocketMQ十万级；kafka producer批量提交消息  
-
-分区数量：kafka支持不超过64，影响性能，RocketMQ不影响性能；kafka每个topic partition对应一个文件，RocketMQ所有消息写入一个commitLog文件；
-### 顺序：
+### 对比RocketMQ### 顺序：
 producer：客户端在发送的时候使用单线程，根据queue选择器和排序id，把有顺序关系的消息都发送到同一个queue上。
 broker：客户端采用同步发送消息，broker收到消息后，顺序写入commitLog文件，保证消息在文件中是有序。
 consumer：1.同一个queue只允许一个consumer消费；2.消息到达consumer后回被放进缓存队列，consumer增加了互斥锁，同一时间同一个queue只会有一个线程在处理；
@@ -69,6 +64,10 @@ consumer：1.同一个queue只允许一个consumer消费；2.消息到达consume
 
 RocketMQ：功能丰富（分区数量、事务消息、失败重试、延迟消息、回溯、不限制消费者数量），毫秒级响应；适合在线业务场景
 kafka：大数据日志场景功能丰富、兼容性好、性能高；适合日志、流式处理、大数据场景。
+
+数据可靠性：kafka支持主从自动切换，RocketMQ不支持Master宕机Slave自动切换；  
+性能：kafka写入百万级，RocketMQ十万级；kafka producer批量提交消息  
+分区数量：kafka支持不超过64，影响性能，RocketMQ不影响性能；kafka每个topic partition对应一个文件，RocketMQ所有消息写入一个commitLog文件；
 
 ## zookeeper
 zookeeper：高可用、高性能、强一致性的分布式开源协调服务。适合同步服务、配置维护和集群命名和管理。
