--- a/document/src/doc/java/数据存储.md
+++ b/document/src/doc/java/数据存储.md
@@ -95,3 +95,5 @@ Isolation（隔离性）：读已提交，通过读写锁 + snapshot+ MVCC实现
 durability（持久性）：通过journal日志和Write Concern写入策略可以实现灵活的分布式持久性。
 4.x版本支持多文档事务和分布式事务。
 
+
+## 对比选型
