--- a/document/src/doc/java/数据存储.md
+++ b/document/src/doc/java/数据存储.md
@@ -118,5 +118,11 @@ Isolation（隔离性）：读已提交，通过读写锁 + snapshot+ MVCC实现
 durability（持久性）：通过journal日志和Write Concern写入策略可以实现灵活的分布式持久性。
 4.x版本支持多文档事务和分布式事务。
 
+## Hbase
+
 
 ## 对比选型
+MySQL：结构化数据；严格事务，数据一致性强；多表关联复杂查询；无官方分库分表；数据量瓶颈；
+MongoDB：非结构化数据；数据分片扩展，海量数据；主从切换高可用；（自动过期、地理位置）无事务；单文档嵌套简单查询；
+redis：高性能，10万qps；单线程，原子性；数据结构丰富；自动过期，当缓存；弱持久化；纯内存，成本高；数据量有限；
+Hbase：
