--- a/document/src/doc/java/分布式中间件.md
+++ b/document/src/doc/java/分布式中间件.md
@@ -1,5 +1,26 @@
 
 ## cap理论
+Consistency一致性：分布式系统中的各节点时时刻刻保持数据的一致性。
+Availability可用性：可以正常的做读写操作，不会出现系统操作失败或者访问超时等问题。
+Partition tolerance分区容错性：分布式系统中的某个节点或者网络分区出现了故障，整个系统仍然能对外提供满足一致性和可用性的服务。
+
+## zookeeper
+zookeeper：高可用、高性能、强一致性的分布式开源协调服务。适合同步服务、配置维护和集群命名和管理。
+1. 存储少量数据。数据是全部存储在内存，目录树结构，节点可以存储少量数据；
+2. 强一致性（CP）。成功写入多数节点；多数节点宕机或集群选举时服务不可用。
+3. 写入性能差。每次需要n/2+1的节点写入，写入性能差。节点数据只能原子操作；
+一致性算法zab：
+节点类型：1.永久节点，显式增加和删除；2.临时节点，生命周期跟session绑定，断开后会自动删除节点；
+节点自增：节点支持有序自增。
+监听节点watcher：客户端可以watch节点的增、删、改操作，客户端只收到一条消息。
+### 应用场景
+分布式锁：1.客户端申请锁目录下创建临时有序节点，并返回该目录所有子节点；2.如果自己是排第一，则获取到锁，执行业务代码；3.如果不是排第一，则加锁失败；4.监听前一个临时节点的删除事件，直到收到通知消息；5.业务代码执行完，主动删除当前节点。如果创建改临时节点的客户端断开连接，zookeeper会清除该临时节点；6。zookeeper发现临时节点被删除，会通知监听该节点的客户端重新获取锁节点列表
+命名服务：依赖顺序节点生成全局唯一命名。
+全局统一配置中心：依赖watch实时监听配置变更。
+注册中心：服务提供者创建临时节点，消费者watch改节点，实时监听服务变更。
+服务协调：在大数据领域，Hadoop、hbase都依赖zookeeper协调节点状态和配置。
+
+
 
 https://blog.csdn.net/suifeng3051/article/details/48053965
 ## kafka
@@ -68,16 +89,5 @@ kafka：大数据日志场景功能丰富、兼容性好、性能高；适合日
 数据可靠性：kafka支持主从自动切换，RocketMQ不支持Master宕机Slave自动切换；  
 性能：kafka写入百万级，RocketMQ十万级；kafka producer批量提交消息  
 分区数量：kafka支持不超过64，影响性能，RocketMQ不影响性能；kafka每个topic partition对应一个文件，RocketMQ所有消息写入一个commitLog文件；
-
-## zookeeper
-zookeeper：高可用、高性能、强一致性的分布式开源协调服务。适合同步服务、配置维护和集群命名和管理。
-目录树结构，节点可以存储少量数据；
-节点数据只能原子操作
-节点类型：1.永久节点，显式增加和删除；2.临时节点，生命周期跟session绑定，断开后会自动删除节点；
-节点自增：节点支持有序自增。
-监听节点：客户端可以watch节点的增、删、改操作，客户端只收到一条消息。
-分布式锁：1.客户端申请锁目录下创建临时有序节点，并返回该目录所有子节点；2.如果自己是排第一，则获取到锁，执行业务代码；3.如果不是排第一，则加锁失败；4.监听前一个临时节点的删除事件，直到收到通知消息；5.业务代码执行完，主动删除当前节点。如果创建改临时节点的客户端断开连接，zookeeper会清除该临时节点；6。zookeeper发现临时节点被删除，会通知监听该节点的客户端重新获取锁节点列表
-
-
 
 ## Sharding-JDBC
