--- a/document/src/doc/java/高性能.md
+++ b/document/src/doc/java/高性能.md
@@ -1,14 +1,31 @@
 
 #### 高性能
-并发：多线程数量，线程利用率，减少线程阻塞和等待；
+服务拆分：按业务、系统、读写、实时离线维度将服务拆分成更细的粒度。
+分布式服务：同一应用部署在多台机器，通过负载均衡策略分发请求。
+并发：合理多线程数量，线程利用率，减少线程阻塞（blocked）和等待（waiting）频繁切换带来的开销；
 异步：异步队列（生产者消费者）、异步日志log4j2、异步发消息、dubbo future异步
 锁优化：synchronized-》reentrantlock-》CAS -》disruptor
-缓存：本地缓存、分布式缓存（画像提前缓存，指标缓存）
+多级缓存：本地缓存、分布式缓存（登录预加载，指标缓存）
 批量：批量写hbase、MongoDB、mysql数据库
-连接池：http连接池，数据库连接池。redis
-预计算：登录预计算、预加载缓存
-高性能引擎：采用自研编译型脚本引擎替换解释型的jexl引擎。
-#### 稳定性
-隔离、限流、熔断、降级、补偿，业务监控、系统监控、报警
+读写分离：1. 数据存储层面读写分离；2. 通过消费kafka消息异步写入
+数据聚合：指标查询场景，通过实时任务对数据进行聚合统计，而不是查询时统计。
+实时离线分离：在服务接口、数据存储、数据处理层面将离线批量处理逻辑与实时处理逻辑分离。
+连接池：http连接池，数据库连接池。避免频繁建立连接和断开连接。
+预处理：**登录**预加载缓存、**热点数据**提前加载缓存。
+高性能组件：采用自研编译型脚本引擎替换解释型的jexl引擎。
+
+#### 高可用
+优先级：设置线程priority优先级属性，实现不同业务的处理优先级。
+幂等：对于写入场景，同一个请求被consumer多次调用，产生的影响与一次调用一致。  
+超时：
+重试：对于**查询**接口偶尔出现超时，选择另一个节点进行重新调用。
+隔离：信号量隔离；线程池隔离；
+限流：信号量Semaphore限流；原子计数器AtomicLong限流；guava ratelimitor限流（令牌桶）；dubbo限流器DefaultTPSLimiter（漏桶）
+熔断：对于平凡超时的非核心应用直接短路，并尝试恢复的机制。底层依赖hystrix实现。
+降级：dubbo mock配置降级策略和默认值；hystrix配置降级；大促期间，手动配置业务降级；
+补偿：
+业务监控
+系统监控
+报警
 
 
