--- a/document/src/doc/java/线上问题.md
+++ b/document/src/doc/java/线上问题.md
@@ -55,3 +55,13 @@ qps到400；CPU80%；load10；每秒4次YGC，30ms，没有full gc
 2. 2g内存，新生代680M；jstate -gcutil 分析内存回收情况，新生代快速占满回收，没有向老年代迁移；扩大内存到4g；
 qps到500，load不变，rt下降到180ms，YGC评率降低每秒一次，20ms；ioutil升高。
 
+
+
+系统流量
+机器配置
+线上问题排查
+系统设计，不合理
+异地多活
+spring bean
+kafka
+
