--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -1,3 +1,12 @@
+#### 设计原则
+接口幂等：同一个业务请求多次调用的结果等同于一次调用。可通过唯一ID、业务状态等方式解决。
+安全回滚：在异常处理时，除了数据库事务回滚，还需要回滚计数器、消息数据等。
+流程可定义：
+尽量异步：
 
-
-异地双活
+https://baijiahao.baidu.com/s?id=1688916329743913023&wfr=spider&for=pc
+https://www.pianshen.com/article/5554360927/
+#### 大数据实时特征平台设计
+分离：查询逻辑与写特征处理逻辑分开部署，业务之间只有数据依赖，没有。
+异步：数据聚合计算由flink、jstorm等实时计算平台处理。
+实时+离线：对于时间跨度长的特征，拆分为实时和离线两个特征。离线计算T+1数据，实时任务计算当天数据。如果离线任务出现延时，
