--- a/document/src/doc/java/高性能.md
+++ b/document/src/doc/java/高性能.md
@@ -17,15 +17,22 @@
 #### 高可用
 优先级：设置线程priority优先级属性，实现不同业务的处理优先级。
 幂等：对于写入场景，同一个请求被consumer多次调用，产生的影响与一次调用一致。  
-超时：
+超时：合理控制接口时间，快速失败。
 重试：对于**查询**接口偶尔出现超时，选择另一个节点进行重新调用。
-隔离：信号量隔离；线程池隔离；
+隔离：信号量隔离；线程池隔离；dubbo接口提供者自定义ExecuteLimitFilter，根据请求参数限制每个业务场景分配的线程数；
 限流：信号量Semaphore限流；原子计数器AtomicLong限流；guava ratelimitor限流（令牌桶）；dubbo限流器DefaultTPSLimiter（漏桶）
-熔断：对于平凡超时的非核心应用直接短路，并尝试恢复的机制。底层依赖hystrix实现。
+熔断：对于频繁超时的非核心应用直接短路，并尝试恢复的机制。底层依赖hystrix实现。
 降级：dubbo mock配置降级策略和默认值；hystrix配置降级；大促期间，手动配置业务降级；
-补偿：
+补偿：失败数据保存消息队列或本地日志文件，事后特殊处理或人工手动维护。
 业务监控
 系统监控
 报警
 
+
+
+发布流程
+灰度发布
+线上配置
+功能开关
+代码回滚
 
