--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -7,6 +7,10 @@
 https://baijiahao.baidu.com/s?id=1688916329743913023&wfr=spider&for=pc
 https://www.pianshen.com/article/5554360927/
 #### 大数据实时特征平台设计
-分离：查询逻辑与写特征处理逻辑分开部署，业务之间只有数据依赖，没有。
-异步：数据聚合计算由flink、jstorm等实时计算平台处理。
-实时+离线：对于时间跨度长的特征，拆分为实时和离线两个特征。离线计算T+1数据，实时任务计算当天数据。如果离线任务出现延时，
+读写分离：查询逻辑与特征处理逻辑分开部署。未支付单聚合计算、实时指标平台
+
+实时聚合：实时聚合统计业务指标数据。
+特征聚合：高性能场景空间换时间；低性能时间换空间
+特征拆解：实时+离线：对于时间跨度长的特征，拆分为实时和离线两个特征。离线数据跨天未计算时，则实时部分需要累积前一天的数据。
+登录预处理：登录预加载缓存；登录预计算；
+画像热加载
