--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -1,8 +1,8 @@
 #### 设计原则
 接口幂等：同一个业务请求多次调用的结果等同于一次调用。可通过唯一ID、业务状态等方式解决。
 安全回滚：在异常处理时，除了数据库事务回滚，还需要回滚计数器、消息数据等。
-流程可定义：
-尽量异步：
+策略可定义：所有策略可以在线上新增、修改、作废、过期。
+尽量异步：非核心流程采用异步方式处理。消息异步、日志异步、生产者消费者异步、多线程异步、
 
 https://baijiahao.baidu.com/s?id=1688916329743913023&wfr=spider&for=pc
 https://www.pianshen.com/article/5554360927/
@@ -13,4 +13,4 @@ https://www.pianshen.com/article/5554360927/
 特征聚合：高性能场景空间换时间；低性能时间换空间
 特征拆解：实时+离线：对于时间跨度长的特征，拆分为实时和离线两个特征。离线数据跨天未计算时，则实时部分需要累积前一天的数据。
 登录预处理：登录预加载缓存；登录预计算；
-画像热加载
+画像热加载：定时加载热数据
