--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -1,8 +1,10 @@
 #### 设计原则
+服务无状态：服务处理结果跟运行环境无关，确保系统扩展性
 接口幂等：同一个业务请求多次调用的结果等同于一次调用。可通过唯一ID、业务状态等方式解决。
 安全回滚：在异常处理时，除了数据库事务回滚，还需要回滚计数器、消息数据等。
 策略可定义：所有策略可以在线上新增、修改、作废、过期。
 尽量异步：非核心流程采用异步方式处理。消息异步、日志异步、生产者消费者异步、多线程异步、
+可关闭可回滚；
 
 https://baijiahao.baidu.com/s?id=1688916329743913023&wfr=spider&for=pc
 https://www.pianshen.com/article/5554360927/
