--- a/document/src/doc/java/分布式中间件.md
+++ b/document/src/doc/java/分布式中间件.md
@@ -100,3 +100,4 @@ kafka：大数据日志场景功能丰富、兼容性好、性能高；适合日
 分区数量：kafka支持不超过64，影响性能，RocketMQ不影响性能；kafka每个topic partition对应一个文件，RocketMQ所有消息写入一个commitLog文件；
 
 ## Sharding-JDBC
+分布式数据分片关系型数据库中间件。使用客户端jar包直连数据库，在JDBC层提供的额外服务。完全兼容JDBC规范。
