--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -8,8 +8,20 @@
 
 https://baijiahao.baidu.com/s?id=1688916329743913023&wfr=spider&for=pc
 https://www.pianshen.com/article/5554360927/
-#### 大数据实时特征平台设计
-读写分离：查询逻辑与特征处理逻辑分开部署。未支付单聚合计算、实时指标平台
+#### 大数据实时风控平台设计
+
+网关接入层：限流、熔断、降级、参数校验、登录数据补全、接入管理（场景事件配置）（轻量、配置化、隔离）
+风控业务层：业务相关逻辑处理
+策略引擎层：风控逻辑判断的核心。名单过滤、策略解析、逻辑执行、结果汇总、生成案件、返回处罚结果。自研脚本解析器，提高执行效率
+特征查询层：根据事件下规则和特征配置，查询当前请求关联的所有特征。基础特征支持redis、MongoDB、hbase等存储数据查询和dubbo接口、模型接口、三方服务接口等多种特征的查询。复合特征是在对基础特征进行加工得到（写加工、读加工）。
+数据计算层：基于Lambda 实时+离线 架构。通过Hive SQL、flink、jstorm等批量和实时任务对业务数据进行聚合计算，并保存到codis、mongodb、hbase等数据库。用户画像、信用额度、订单数据、设备风险、实时指标、黑白名单统计、
+审核管理：事件、场景、策略、特征的配置管理；风控案件的审核：ES+MongoDB。
+业务统计和监控：统计报表配置、业务指标监控以及异常监控和报警；
+组件层：设备指纹、一键登录、手机号风险、人机识别等组件一般通过采购外部资源、独立部署，降低成本、快速上线。
+
+
+
+查算分离：查询逻辑与特征处理逻辑分开部署。未支付单聚合计算、实时指标平台
 
 实时聚合：实时聚合统计业务指标数据。
 特征聚合：高性能场景空间换时间；低性能时间换空间
