--- a/document/src/doc/java/高性能.md
+++ b/document/src/doc/java/高性能.md
@@ -10,9 +10,10 @@
 读写分离：1. 数据存储层面读写分离；2. 通过消费kafka消息异步写入
 数据聚合：指标查询场景，通过实时任务对数据进行聚合统计，而不是查询时统计。
 实时离线分离：在服务接口、数据存储、数据处理层面将离线批量处理逻辑与实时处理逻辑分离。
-连接池：http连接池，数据库连接池。避免频繁建立连接和断开连接。
+连接池：http连接池，数据库连接池。避免频繁建立连接和断开连接。绿码服务使用CloseableHttpClient，并调整重试策略（）
 预处理：**登录**预加载缓存、**热点数据**提前加载缓存。
-高性能组件：采用自研编译型脚本引擎替换解释型的jexl引擎。
+高性能脚本引擎
+采用自研编译型脚本引擎替换解释型的jexl引擎；多个小脚本合并成大脚本；本地缓存实例；每个脚本单独ClassLoader，避免共用同一个ClassLoader导致脚本class无法被卸载。调整JIT codeCache出事大小和预留大小。
 
 #### 高可用
 优先级：设置线程priority优先级属性，实现不同业务的处理优先级。
