--- a/document/src/doc/java/数据存储.md
+++ b/document/src/doc/java/数据存储.md
@@ -134,9 +134,9 @@ java开发构建在HDFS之上支持实时读写、随机访问、超大规模数
 高性能：顺序写入WAL文件到磁盘，定期flush硬盘（LSM数据结构，按Rowkey有序存储）；优先读MemStore(写缓存)->BlockCache(读缓存)->StoreFile(文件)；BloomFilter过滤可能存在rowkey的StoreFiles。
 事务：目前只支持行级事务，强一致性，满足的ACID特性。单行操作原子性，无锁CAS操作保障原子性；其采用了WAL（Write Ahead Log）策略，以及通过锁和MVCC机制来实现并发控制。
   
-
 可用性：WAL恢复较慢，期间该region不可用。
 性能：Major compaction占用IO等资源，影响性能。查询多个StoreFiles做查询，性能较差。
+功能：KV结构查询，不支持SQL。
 ## 对比选型
 MySQL(CA)：结构化数据；严格事务，数据一致性强；多表关联复杂查询；无官方分库分表；数据量瓶颈；(量级小、读多写少)
 redis(CP)：高性能，10万qps；单线程，原子性；数据结构丰富；自动过期，当缓存；弱持久化；纯内存，成本高；数据量有限；（量级小，读多写多）
@@ -144,6 +144,6 @@ MongoDB(CP)：非结构化数据；数据分片扩展，海量数据；主从切
 Hbase(CP)：列式存储；空列不存储；无限制列，可扩展列；多版本；高性能写入；只能查询Key；（海量级，写多读少）
 ElasticSearch:实时索引；复杂条件索引；
 
-HashMap：哈希结构，定时持久化或日志持久化。O(1)读写性能非常高。只能全KEY匹配，无范围查询。写快读快。hash碰撞性能降低。数据全加载内存。
+HashMap：哈希结构，定时dump或日志持久化。O(1)读写性能非常高。只能全KEY匹配，无范围查询。写快读快。hash碰撞性能降低。数据全加载内存。
 B+ Tree：一整颗n叉树，实时写入。O(n)支持有序遍历和范围扫描。写慢读快。数据持久化到磁盘（随机写），内存做缓存。
 LSM Tree：N棵n叉树，定时合并。支持随机读写和顺序扫描。写快读慢。写内存，批量持久化到磁盘（顺序写），内存做缓存。
