--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -12,10 +12,10 @@ https://www.pianshen.com/article/5554360927/
 
 ##### 网关接入层
 风控系统对外网关，接口对接、请求隔离、限流、熔断、降级、参数校验、登录数据补全、接入管理（场景事件配置）（轻量、配置化、隔离）
-
 ##### 风控业务层（暂无）
 针对业务相关逻辑处理，比如登录验证流程对接、返回参数处理等；
-策略引擎层：风控策略逻辑判断的核心。名单匹配、策略解析、逻辑执行、结果汇总、生成案件、返回处罚结果。自研脚本解析器，提高执行效率
+##### 风控核心层：
+风控策略逻辑判断的核心。包含名单中心、策略引擎、处罚中心、案件中心等。名单匹配、策略解析、逻辑执行、结果汇总、生成案件、返回处罚结果。自研脚本解析器，提高执行效率
 特征查询层：根据事件下规则和特征配置，查询当前请求关联的所有特征。基础特征支持redis、MongoDB、hbase等存储数据查询和dubbo接口、模型接口、三方服务接口等多种特征的查询。复合特征是在对基础特征进行加工得到（写加工、读加工）。
 数据计算层：基于Lambda 实时+离线 架构。通过Hive SQL、flink、jstorm等批量和实时任务对业务数据进行聚合计算，并保存到codis、mongodb、hbase等数据库。用户画像、信用额度、订单数据、设备风险、实时指标、黑白名单统计、
 审核管理：事件、场景、策略、特征的配置管理；风控案件的审核：ES+MongoDB。
