--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -1,4 +1,4 @@
-#### 设计原则
+## 设计原则
 服务无状态：服务处理结果跟运行环境无关，确保系统扩展性
 接口幂等：同一个业务请求多次调用的结果等同于一次调用。可通过唯一ID、业务状态等方式解决。
 安全回滚：在异常处理时，除了数据库事务回滚，还需要回滚计数器、消息数据等。
@@ -8,15 +8,27 @@
 
 https://baijiahao.baidu.com/s?id=1688916329743913023&wfr=spider&for=pc
 https://www.pianshen.com/article/5554360927/
-#### 大数据实时风控平台设计
+## 大数据实时风控平台设计
 
-##### 网关接入层
+### 网关接入层
 风控系统对外网关，接口对接、请求隔离、限流、熔断、降级、参数校验、登录数据补全、接入管理（场景事件配置）（轻量、配置化、隔离）
-##### 风控业务层（暂无）
-针对业务相关逻辑处理，比如登录验证流程对接、返回参数处理等；
-##### 风控核心层：
-风控策略逻辑判断的核心。包含名单中心、策略引擎、处罚中心、案件中心等。名单匹配、策略解析、逻辑执行、结果汇总、生成案件、返回处罚结果。自研脚本解析器，提高执行效率
-特征查询层：根据事件下规则和特征配置，查询当前请求关联的所有特征。基础特征支持redis、MongoDB、hbase等存储数据查询和dubbo接口、模型接口、三方服务接口等多种特征的查询。复合特征是在对基础特征进行加工得到（写加工、读加工）。
+### 风控业务层（暂无）
+针对业务领域相关逻辑处理，比如登录验证流程对接、返回参数处理等；
+### 风控核心层：
+风控系统的核心。包含名单中心、策略引擎中心、处罚中心、案件中心等。
+**名单中心**提供包括黑、白、其他等（用户号、手机号、设备号等各种维度）名单列表的匹配查询服务和简单逻辑判断服务。通过本地缓存（guava cache、bitmap）、分布式缓存（redis）和mysql持久化数据。
+**策略引擎中心**提供风控策略的关联、解析、执行、结果汇总等功能。通过自研的脚本引擎高效的执行规则脚本。1.执行效率；2.兼容原有规则语法。
+**处罚中心**根据策略执行结果，决定相应的处罚措施（拉黑名单、提示充值、静默叫车等）
+**案件中心**对触发风控策略的请求生成案件，以便后续人工核查和问题排查。ES保存数据查询索引，MongoDB保存案件详情。
+### 特征查询层：
+根据事件下规则和特征配置，查询当前请求关联的所有特征。基础特征支持redis、MongoDB、hbase等存储数据查询和dubbo接口、模型接口、三方服务接口等多种特征的查询。复合特征是在对基础特征进行加工得到（写加工、读加工）。  
+**查询合并**将同一个用户的不同车型订单关联的特征分类为订单相关和订单无关特征，将所有订单无关特征合并为一次查询，减少重复查询。
+**动态超时控制**根据请求超时时间和请求已消耗的时间，动态计算当前节点的可用时间，避免线程无用等待。
+**特征缓存**针对外部接口很耗时数据，进行redis缓存和本地缓存。
+**提前缓存**登录时提前加载用户画像、设备画像等数据到缓存；
+**预处理**
+**多种计算时机**
+
 数据计算层：基于Lambda 实时+离线 架构。通过Hive SQL、flink、jstorm等批量和实时任务对业务数据进行聚合计算，并保存到codis、mongodb、hbase等数据库。用户画像、信用额度、订单数据、设备风险、实时指标、黑白名单统计、
 审核管理：事件、场景、策略、特征的配置管理；风控案件的审核：ES+MongoDB。
 业务统计和监控：统计报表配置、业务指标监控以及异常监控和报警；
