--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -26,8 +26,8 @@ https://www.pianshen.com/article/5554360927/
 **动态超时控制**根据请求超时时间和请求已消耗的时间，动态计算当前节点的可用时间，避免线程无用等待。
 **特征缓存**针对外部接口很耗时数据，进行redis缓存和本地缓存。
 **提前缓存**登录时提前加载用户画像、设备画像等数据到缓存；
-**预处理**
-**多种计算时机**
+**预处理**登录时计算用户账号、设备、网络环境等相关风险数据。
+**多种计算时机**针对复合特征，提供写入计算和查询计算两种数据处理方式。
 
 数据计算层：基于Lambda 实时+离线 架构。通过Hive SQL、flink、jstorm等批量和实时任务对业务数据进行聚合计算，并保存到codis、mongodb、hbase等数据库。用户画像、信用额度、订单数据、设备风险、实时指标、黑白名单统计、
 审核管理：事件、场景、策略、特征的配置管理；风控案件的审核：ES+MongoDB。
