--- a/document/src/doc/java/高性能.md
+++ b/document/src/doc/java/高性能.md
@@ -2,6 +2,7 @@
 #### 高性能
 服务拆分：按业务、系统、读写、实时离线维度将服务拆分成更细的粒度。
 分布式服务：同一应用部署在多台机器，通过负载均衡策略分发请求。
+
 并发：合理多线程数量，线程利用率，减少线程阻塞（blocked）和等待（waiting）频繁切换带来的开销；
 异步：异步队列（生产者消费者）、异步日志log4j2、异步发消息、dubbo future异步
 锁优化：synchronized-》reentrantlock-》CAS -》disruptor
@@ -9,12 +10,13 @@
 批量：批量写hbase、MongoDB、mysql数据库
 读写分离：1. 数据存储层面读写分离；2. 通过消费kafka消息异步写入
 数据聚合：指标查询场景，通过实时任务对数据进行聚合统计，而不是查询时统计。
-实时离线分离：在服务接口、数据存储、数据处理层面将离线批量处理逻辑与实时处理逻辑分离。
+实时特征拆分：将时间跨度长的实时特征拆分为T-N离线特征和近N天实时特征。
 连接池：http连接池，数据库连接池。避免频繁建立连接和断开连接。绿码服务使用CloseableHttpClient，并调整重试策略（）
-预缓存：**登录**预加载缓存、**热点数据**提前加载缓存。
-高性能脚本引擎
-采用自研编译型脚本引擎替换解释型的jexl引擎；多个小脚本合并成大脚本；本地缓存实例；每个脚本单独ClassLoader，避免共用同一个ClassLoader导致脚本class无法被卸载。调整JIT codeCache出事大小和预留大小。
 
+提前缓存：**登录**预加载画像数据到缓存、**热点数据**提前加载缓存。
+预处理：登录、叫单等节点进行设备环境相关特征的计算并缓存。
+高性能脚本引擎：采用自研编译型脚本引擎替换解释型的jexl引擎；多个小脚本合并成大脚本；本地缓存实例；每个脚本单独ClassLoader，避免共用同一个ClassLoader导致脚本class无法被卸载。调整JIT codeCache出事大小和预留大小。
+写计算：对于实时性要求高的场景，复合特征的计算由查询时计算调整为写入式计算。（以空间换时间）
 #### 高可用
 优先级：设置线程priority优先级属性，实现不同业务的处理优先级。
 幂等：对于写入场景，同一个请求被consumer多次调用，产生的影响与一次调用一致。  
