--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -12,24 +12,31 @@ https://www.pianshen.com/article/5554360927/
 
 ### 网关接入层
 风控系统对外网关，接口对接、请求隔离、限流、熔断、降级、参数校验、登录数据补全、接入管理（场景事件配置）（轻量、配置化、隔离）
+异步无阻塞网关：服务端异步执行AsyncContext+客户端异步调用+客户端事件通知实现异步网关
+sync->Future->callback->CompletableFuture
 ### 风控业务层（暂无）
-针对业务领域相关逻辑处理，比如登录验证流程对接、返回参数处理等；
+针对业务领域相关逻辑处理，比如登录验证流程对接、返回参数处理、信用额度处理等；
 ### 风控核心层：
 风控系统的核心。包含名单中心、策略引擎中心、处罚中心、案件中心等。
 **名单中心**提供包括黑、白、其他等（用户号、手机号、设备号等各种维度）名单列表的匹配查询服务和简单逻辑判断服务。通过本地缓存（guava cache、bitmap）、分布式缓存（redis）和mysql持久化数据。
 **策略引擎中心**提供风控策略的关联、解析、执行、结果汇总等功能。通过自研的脚本引擎高效的执行规则脚本。1.执行效率；2.兼容原有规则语法。
 **处罚中心**根据策略执行结果，决定相应的处罚措施（拉黑名单、提示充值、静默叫车等）
 **案件中心**对触发风控策略的请求生成案件，以便后续人工核查和问题排查。ES保存数据查询索引，MongoDB保存案件详情。
+批量请求合并处理（减少特征查询）；分批次执行策略（减少执行耗时策略）；
+
 ### 特征查询层：
 根据事件下规则和特征配置，查询当前请求关联的所有特征。基础特征支持redis、MongoDB、hbase等存储数据查询和dubbo接口、模型接口、三方服务接口等多种特征的查询。复合特征是在对基础特征进行加工得到（写加工、读加工）。  
 **查询合并**将同一个用户的不同车型订单关联的特征分类为订单相关和订单无关特征，将所有订单无关特征合并为一次查询，减少重复查询。
 **动态超时控制**根据请求超时时间和请求已消耗的时间，动态计算当前节点的可用时间，避免线程无用等待。
 **特征缓存**针对外部接口很耗时数据，进行redis缓存和本地缓存。
-**提前缓存**登录时提前加载用户画像、设备画像等数据到缓存；
+**提前缓存**登录时提前加载用户画像、设备画像等数据到缓存；定时加载画像数据到缓存；
 **预处理**登录时计算用户账号、设备、网络环境等相关风险数据。
 **多种计算时机**针对复合特征，提供写入计算和查询计算两种数据处理方式。
 
-数据计算层：基于Lambda 实时+离线 架构。通过Hive SQL、flink、jstorm等批量和实时任务对业务数据进行聚合计算，并保存到codis、mongodb、hbase等数据库。用户画像、信用额度、订单数据、设备风险、实时指标、黑白名单统计、
+### 数据计算层
+指标计算中心、实时特征计算、离线特征计算（用户画像、设备画像）
+基于Lambda 实时+离线 架构。通过Hive SQL、flink、jstorm等批量和实时任务对业务数据进行聚合计算，并保存到codis、mongodb、hbase等数据库。用户画像、信用额度、订单数据、设备风险、实时指标、黑白名单统计、
+
 审核管理：事件、场景、策略、特征的配置管理；风控案件的审核：ES+MongoDB。
 业务统计和监控：统计报表配置、业务指标监控以及异常监控和报警；
 组件层：设备指纹、一键登录、手机号风险、人机识别等组件一般通过采购外部资源、独立部署，降低成本、快速上线。
