--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -1,4 +1,5 @@
 ## 设计原则
+服务拆分：
 服务无状态：服务处理结果跟运行环境无关，确保系统扩展性
 接口幂等：同一个业务请求多次调用的结果等同于一次调用。可通过唯一ID、业务状态等方式解决。
 安全回滚：在异常处理时，除了数据库事务回滚，还需要回滚计数器、消息数据等。
@@ -8,14 +9,17 @@
 
 https://baijiahao.baidu.com/s?id=1688916329743913023&wfr=spider&for=pc
 https://www.pianshen.com/article/5554360927/
-## 大数据实时风控平台设计
-
-### 网关接入层
+## 大数据实时风控平台设计（海量数据、实时）
+覆盖曹操出行全平台业务流程，登录注册、营销、订单、财务、派单等核心场景。通过规则策略+算法模型过风险和作弊行为进行实时识别和管控，取得很好的效果，严格口径下年挽回损失4000万。
+日活近千万，百万订单，亿级请求。
+压测环境红包活动场景下单机5万QPS。rt2ms。（频繁gc、CPU占用95%、load10+）
+### 网关接入层（全异步非阻塞）
 风控系统对外网关，接口对接、请求隔离、限流、熔断、降级、参数校验、登录数据补全、接入管理（场景事件配置）（轻量、配置化、隔离）
 异步无阻塞网关：服务端异步执行AsyncContext+客户端异步调用+客户端事件通知实现异步网关
 sync->Future->callback->CompletableFuture
-### 风控业务层（暂无）
-针对业务领域相关逻辑处理，比如登录验证流程对接、返回参数处理、信用额度处理等；
+压测环境红包活动场景下单机2万QPS。rt10ms。（频繁gc、CPU占用95%）
+### 风控业务层
+针对业务领域相关逻辑处理，比如登录注册风险用户打标、叫单特殊参数处理、信用额度处理等；
 ### 风控核心层：
 风控系统的核心。包含名单中心、策略引擎中心、处罚中心、案件中心等。
 **名单中心**提供包括黑、白、其他等（用户号、手机号、设备号等各种维度）名单列表的匹配查询服务和简单逻辑判断服务。通过本地缓存（guava cache、bitmap）、分布式缓存（redis）和mysql持久化数据。
@@ -34,8 +38,12 @@ sync->Future->callback->CompletableFuture
 **多种计算时机**针对复合特征，提供写入计算和查询计算两种数据处理方式。
 
 ### 数据计算层
-指标计算中心、实时特征计算、离线特征计算（用户画像、设备画像）
-基于Lambda 实时+离线 架构。通过Hive SQL、flink、jstorm等批量和实时任务对业务数据进行聚合计算，并保存到codis、mongodb、hbase等数据库。用户画像、信用额度、订单数据、设备风险、实时指标、黑白名单统计、
+指标计算中心：通过flink任务对业务kafka数据进行清洗、聚合、加工等处理，得到实时的风控指标。
+实时特征计算：通过实时任务对用户特征（未支付订单数）进行较复杂的关联计算。实时数据保存在redis缓存。
+离线特征计算（用户画像、设备画像）：离线任务计算历史画像数据，全量保存在ES宽表，热点数据缓存。
+风险评分：
+信用额度：
+基于Lambda 实时+离线 架构。通过Hive SQL、flink、jstorm等批量和实时任务对业务数据进行聚合计算，并保存到codis、mongodb、hbase、ES等数据库。用户画像、信用额度、订单数据、设备风险、实时指标、黑白名单统计、
 
 审核管理：事件、场景、策略、特征的配置管理；风控案件的审核：ES+MongoDB。
 业务统计和监控：统计报表配置、业务指标监控以及异常监控和报警；
@@ -50,3 +58,8 @@ sync->Future->callback->CompletableFuture
 特征拆解：实时+离线：对于时间跨度长的特征，拆分为实时和离线两个特征。离线数据跨天未计算时，则实时部分需要累积前一天的数据。
 登录预处理：登录预加载缓存；登录预计算；
 画像热加载：定时加载热数据
+
+
+### 建设方向
+模型效果评估：解决传统模型效果评估周期长（开发、上线、观察、分析）的难题，通过对线上流量和特征进行回放，收集模型命中结果数据与预期进行实时对比分析，快速发现模型缺陷并进行迭代。
+动态对接风控系统：解决风控被动对接业务系统存在遗漏和延迟的问题，通过代码注入的方式在业务系统关键点加入风控数据采集和逻辑判断代码，主动发现和管控业务风险。
