--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -1,7 +1,7 @@
 ## 设计原则
 服务拆分：
 服务无状态：服务处理结果跟运行环境无关，确保系统扩展性
-接口幂等：同一个业务请求多次调用的结果等同于一次调用。可通过唯一ID、业务状态等方式解决。
+接口幂等：同一个业务请求多次调用的结果等同于一次调用。可通过唯一ID、业务状态、禁止retry等方式解决。
 安全回滚：在异常处理时，除了数据库事务回滚，还需要回滚计数器、消息数据等。
 策略可定义：所有策略可以在线上新增、修改、作废、过期。
 尽量异步：非核心流程采用异步方式处理。消息异步、日志异步、生产者消费者异步、多线程异步、
@@ -23,21 +23,22 @@ sync->Future->callback->CompletableFuture
 ### 风控核心层：
 风控系统的核心。包含名单中心、策略引擎中心、处罚中心、案件中心等。
 **名单中心**提供包括黑、白、其他等（用户号、手机号、设备号等各种维度）名单列表的匹配查询服务和简单逻辑判断服务。通过本地缓存（guava cache、bitmap）、分布式缓存（redis）和mysql持久化数据。
-**策略引擎中心**提供风控策略的关联、解析、执行、结果汇总等功能。通过自研的脚本引擎高效的执行规则脚本。1.执行效率；2.兼容原有规则语法。
+**策略引擎中心**提供风控策略的关联、解析、执行、结果汇总等功能。通过自研的脚本引擎高效的执行规则脚本。1.执行效率；2.兼容原有规则语法。小脚本合并；
 **处罚中心**根据策略执行结果，决定相应的处罚措施（拉黑名单、提示充值、静默叫车等）
 **案件中心**对触发风控策略的请求生成案件，以便后续人工核查和问题排查。ES保存数据查询索引，MongoDB保存案件详情。
-批量请求合并处理（减少特征查询）；分批次执行策略（减少执行耗时策略）；
+批量请求合并处理（减少特征查询）；分批次执行策略（减少执行耗时策略）；小脚本合并；异步处罚；异步案件；案件查询优化；
 
-### 特征查询层：
+### 特征查询层：（高性能、高可用）
 根据事件下规则和特征配置，查询当前请求关联的所有特征。基础特征支持redis、MongoDB、hbase等存储数据查询和dubbo接口、模型接口、三方服务接口等多种特征的查询。复合特征是在对基础特征进行加工得到（写加工、读加工）。  
 **查询合并**将同一个用户的不同车型订单关联的特征分类为订单相关和订单无关特征，将所有订单无关特征合并为一次查询，减少重复查询。
 **动态超时控制**根据请求超时时间和请求已消耗的时间，动态计算当前节点的可用时间，避免线程无用等待。
 **特征缓存**针对外部接口很耗时数据，进行redis缓存和本地缓存。
+**特征拆解**实时+离线：
 **提前缓存**登录时提前加载用户画像、设备画像等数据到缓存；定时加载画像数据到缓存；
 **预处理**登录时计算用户账号、设备、网络环境等相关风险数据。
 **多种计算时机**针对复合特征，提供写入计算和查询计算两种数据处理方式。
 
-### 数据计算层
+### 数据计算层（实时、准确、高性能）
 指标计算中心：通过flink任务对业务kafka数据进行清洗、聚合、加工等处理，得到实时的风控指标。
 实时特征计算：通过实时任务对用户特征（未支付订单数）进行较复杂的关联计算。实时数据保存在redis缓存。
 离线特征计算（用户画像、设备画像）：离线任务计算历史画像数据，全量保存在ES宽表，热点数据缓存。
