--- a/document/src/doc/java/高性能.md
+++ b/document/src/doc/java/高性能.md
@@ -13,6 +13,7 @@
 实时特征拆分：将时间跨度长的实时特征拆分为T-N离线特征和近N天实时特征。
 连接池：http连接池，数据库连接池。避免频繁建立连接和断开连接。绿码服务使用CloseableHttpClient，并调整重试策略（）
 
+全异步网关。
 提前缓存：**登录**预加载画像数据到缓存、**热点数据**提前加载缓存。
 预处理：登录、叫单等节点进行设备环境相关特征的计算并缓存。
 高性能脚本引擎：采用自研编译型脚本引擎替换解释型的jexl引擎；多个小脚本合并成大脚本；本地缓存实例；每个脚本单独ClassLoader，避免共用同一个ClassLoader导致脚本class无法被卸载。调整JIT codeCache出事大小和预留大小。
@@ -24,13 +25,20 @@
 重试：对于**查询**接口偶尔出现超时，选择另一个节点进行重新调用。
 隔离：信号量隔离；线程池隔离；dubbo接口提供者自定义ExecuteLimitFilter，根据请求参数限制每个业务场景分配的线程数；
 限流：信号量Semaphore限流；原子计数器AtomicLong限流；guava ratelimitor限流（令牌桶）；dubbo限流器DefaultTPSLimiter（漏桶）
-熔断：对于频繁超时的非核心应用直接短路，并尝试恢复的机制。底层依赖hystrix实现。
+熔断：对于频繁超时的非核心应用直接短路，并尝试恢复的机制。底层依赖hystrix实现。特征层熔断降级
 降级：dubbo mock配置降级策略和默认值；hystrix配置降级；大促期间，手动配置业务降级；
 补偿：失败数据保存消息队列或本地日志文件，事后特殊处理或人工手动维护。
 业务监控
 系统监控
 报警
 
+### 异地双活
+由于网络延迟导致数据冲突或不一致情况，需要权衡吞吐量和一致性。通过引入分布式锁/分布式事务保障一致性；也可以通过中间软状态，最终一致性等保障吞吐量。
+一般通过数据同步工具、消息队列等保障数据最终一致性。对于一致性要求严格的场景，采用主从数据库方案。
+对于简单业务场景，直接按业务维度进行sharding即可，必比如按照全国划分区域，跨区域的数据需要特殊处理。
+
+1.两地三中心切线，业务代码返回特定错误码（例如数据库异常，一般表示某个中心可能存在down机或不可用的的可能性），客户端进行切线。
+2.多次重试请求后不可用，进行切线。
 
 
 发布流程
