--- a/document/src/doc/java/分布式中间件.md
+++ b/document/src/doc/java/分布式中间件.md
@@ -14,14 +14,35 @@ Basically Available（基本可用）、Soft state（软状态）和Eventually c
 软状态：指允许系统在不同节点的数据副本之间进行数据同步的过程存在延时。  
 最终一致性：系统中所有的数据副本，在经过一段时间的同步后，最终能够达到一个一致的状态。  
 
+## 选举算法
+Raft
+Raft将系统中的角色分为领导者（Leader，0~1个）、跟从者（Follower，1~n个）和候选人（Candidate，0~n个）；
+选举：
+1. 当服务器启动时，初始化为Follower。如果Follower在选举超时时间内没有收到Leader的heartbeat，就会等待一段随机的时间后发起一次Leader选举。
+2. Follower将其当前term加一然后转换为Candidate，它首先给自己投票并且给集群中的其他服务器发送投票请求。节点在同一次投票周期内，只给一个节点投票。多数的选票，成功选举为Leader；收到了Leader的消息，表示有其它服务器已经抢先当选了Leader；没有服务器赢得多数的选票，Leader选举失败，等待选举时间超时后发起下一次选举。
+3. Follower如果一段时间内没有收到Leader心跳，则认为Leader挂了，重新发起新一轮选主投票
+数据同步：
+1. 日志包含有序编号、当前任期、命令和前一条日志的编号和任期。如果follower找不到前一条日志的编号和任期，则拒绝该日志。
+2. Leader要求Followe遵从他的指令，都将这个新的日志内容追加到他们各自日志中，大多数follower收到日志并返回确认后，Leader发出commit命令。
+3. Leader通过强制Followers复制它的日志来处理日志的不一致，Followers上的不一致的日志会被Leader的日志覆盖。
+Zab
+基本原理与raft一致
+日志同步差异
+ZooKeeper在每次leader选举完成之后，都会进行数据之间的同步纠正，所以每一个轮次，大家都日志内容都是统一的。
+Raft在leader选举完成之后没有这个同步过程，而是靠之后的AppendEntries RPC请求的一致性检查来实现纠正过程，则就会出现上述案例中隔了几个轮次还不统一的现象
+投票过程差异
+Raft：每个轮次内server只能投票一次，哪个candidate先请求就获得投票，可能出现多个candidate获得票数一样的情况，Raft通过candidate设置随机不同的超时时间，那么先超时的先发起投票获得选举。
+ZooKeeper：在每个轮次内，可以投多次票。遇到更大更新的日志则更新投票结果，通知所有人，不存在获取票数一样多的情况，但是时间会更长
+
+
 ## zookeeper
 zookeeper：高可用、高性能、强一致性的分布式开源协调服务。适合同步服务、配置维护和集群命名和管理。
 1. 存储少量数据。数据是全部存储在内存，目录树结构，节点可以存储少量数据；
 2. 强一致性（CP）。成功写入多数节点；多数节点宕机或集群选举时服务不可用。
 3. 写入性能差。每次需要n/2+1的节点写入，写入性能差。节点数据只能原子操作；
-一致性算法zab：
 节点类型：1.永久节点，显式增加和删除；2.临时节点，生命周期跟session绑定，断开后会自动删除节点；
 节点自增：节点支持有序自增。
+核心是原子广播协议zab，保障server之间同步。
 监听节点watcher：客户端可以watch节点的增、删、改操作，客户端只收到一条消息。
 ### 应用场景
 分布式锁：1.客户端申请锁目录下创建临时有序节点，并返回该目录所有子节点；2.如果自己是排第一，则获取到锁，执行业务代码；3.如果不是排第一，则加锁失败；4.监听前一个临时节点的删除事件，直到收到通知消息；5.业务代码执行完，主动删除当前节点。如果创建改临时节点的客户端断开连接，zookeeper会清除该临时节点；6。zookeeper发现临时节点被删除，会通知监听该节点的客户端重新获取锁节点列表
@@ -63,6 +84,10 @@ Memory Mapped Files内存文件映射：直接利用操作系统的Page来实现
 https://blog.csdn.net/dingshuo168/article/details/102970988
 https://www.wwwbuild.net/huangtalkit/23928.html
 ## RocketMQ
+commitLog日志文件：保存消息完整内容，broker上所有topic公用一个commitLog文件。
+ConsumeQueue：每个topic一个，保存消息实际保存在CommitLog.offset位置；消息的tag。
+indexFile：保存消息的ID，通过ID查找消息时。
+offsettable.offset：ConsumeQueue的消费进度，保存在json配置文件。
 ### 对比RocketMQ### 顺序：
 producer：客户端在发送的时候使用单线程，根据queue选择器和排序id，把有顺序关系的消息都发送到同一个queue上。
 broker：客户端采用同步发送消息，broker收到消息后，顺序写入commitLog文件，保证消息在文件中是有序。
@@ -101,3 +126,22 @@ kafka：大数据日志场景功能丰富、兼容性好、性能高；适合日
 
 ## Sharding-JDBC
 分布式数据分片关系型数据库中间件。使用客户端jar包直连数据库，在JDBC层提供的额外服务。完全兼容JDBC规范。
+
+## 分布式事务
+
+
+#### 服务发现与治理
+zookeeper（1.provider启动时在接口providers目录下创建临时子节点，写入自己的IP和端口；2.consumer启动时，订阅接口providers目录下所有子节点，并根据子节点信息解析提供者；consumer在接口consumers目录下创建临时子节点，写入自己的URL地址；3.增加提供者时，providers下面创建新临时子节点，zookeeper会推送节点信息给consumer；4.provider出现故障或下线时，由于临时节点与session有关，改临时节点会被自动删除；5.zookeeper宕机之后，服务提供者信息保存在内存和本地文件，无法感知到提供者变更
+#### 分布式ID生成器
+雪花算法64bit（41位，用来记录时间戳（毫秒），10位用来记录工作机器id（5位datacenterId 和 5位workerId），12位，序列号，用来记录同毫秒内产生的不同id）。
+时钟回拨问题：1.抛异常；2.等待；3.设计时钟回拨位，发生回拨时+1。美团leaf（zookeeper生成workid，并缓存在本地；定时上报机器时间到zk，重启时保证当前机器时间>zk保存时间；RPC访问其他机器时间，偏差大则启动失败。1.关闭NTP机器时间同步。2.出现时钟重播时，返回异常、等待重试或下线该节点）。
+#### 分布式锁
+zookeeper锁：可靠性很高，强一致性。依赖zookeeper，可用性不足，效率一般。
+redis锁：不可重入、单节点。加锁（SET anyLock current_client NX PX 30000），释放锁（lua脚本实现，如果value值为当前线程，则删除key）；重入锁通过hash结构来实现。（效率高，超时问题、分布式环境下数据同步问题、主从切换问题）
+redlock：在2N+1台机器上，同时执行上面逻辑，N+1台机器执行成功则成功。（效率稍低，解决分布式环境下数据同步问题，维护成本高）
+#### 分布式限流
+guava ratelimiter：next（上一次取数的终止时间点）speed（频率每秒） maxPermits(最大申请量)。1.(current-next)*speed表示当前桶令牌数；2.如果桶令牌数小于permit，可以预支，next为预支后的时间点；3.next>current表示已经预支，当前不可获取。
+分布式限流：基于redis实现，把ratelimiter的逻辑通过redis lua脚本实现。
+
+
+# 微服务系统设计
