--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -7,9 +7,11 @@
 尽量异步：非核心流程采用异步方式处理。消息异步、日志异步、生产者消费者异步、多线程异步、
 可关闭可回滚；
 
+## DDD领域驱动设计
+
 https://baijiahao.baidu.com/s?id=1688916329743913023&wfr=spider&for=pc
 https://www.pianshen.com/article/5554360927/
-## 大数据实时风控平台设计（海量数据、实时）
+## 大数据实时风控平台设计（海量、高性能、实时）
 覆盖曹操出行全平台业务流程，登录注册、营销、订单、财务、派单等核心场景。通过规则策略+算法模型过风险和作弊行为进行实时识别和管控，取得很好的效果，严格口径下年挽回损失4000万。
 日活近千万，百万订单，亿级请求。
 压测环境红包活动场景下单机5万QPS。rt2ms。（频繁gc、CPU占用95%、load10+）
@@ -43,7 +45,7 @@ sync->Future->callback->CompletableFuture
 实时特征计算：通过实时任务对用户特征（未支付订单数）进行较复杂的关联计算。实时数据保存在redis缓存。
 离线特征计算（用户画像、设备画像）：离线任务计算历史画像数据，全量保存在ES宽表，热点数据缓存。
 风险评分：
-信用额度：
+信用评分：
 基于Lambda 实时+离线 架构。通过Hive SQL、flink、jstorm等批量和实时任务对业务数据进行聚合计算，并保存到codis、mongodb、hbase、ES等数据库。用户画像、信用额度、订单数据、设备风险、实时指标、黑白名单统计、
 
 审核管理：事件、场景、策略、特征的配置管理；风控案件的审核：ES+MongoDB。
