--- a/document/src/doc/java/线上问题.md
+++ b/document/src/doc/java/线上问题.md
@@ -8,7 +8,7 @@ jps（找到应用进程pid）
 jstate 内存分布
 top -H -p（分析CPU占用高的线程）
 jstack 分析线程状态和栈信息
-jmap （分析类实例和空间占用，dump堆内存到文件）
+jmap （分析类实例和空间占用，jmap -dump 堆内存快照到文件） jmap -histo pid
 建议：-Xms和-Xmx的值设置成相等，避免动态调整内存大小；新生代尽量设置大一些；根据gc日志，结合延迟目标，分配新生代大小和比例
 短命大对象和数组；大循环创建对象；大批量处理数据；强引用缓存集合；长时间占用对象。
 
