--- a/document/src/doc/java/高性能.md
+++ b/document/src/doc/java/高性能.md
@@ -13,10 +13,10 @@
 实时特征拆分：将时间跨度长的实时特征拆分为T-N离线特征和近N天实时特征。
 连接池：http连接池，数据库连接池。避免频繁建立连接和断开连接。绿码服务使用CloseableHttpClient，并调整重试策略（）
 
-全异步网关。
+全异步网关：减少线程阻塞，提高利用率。
 提前缓存：**登录**预加载画像数据到缓存、**热点数据**提前加载缓存。
 预处理：登录、叫单等节点进行设备环境相关特征的计算并缓存。
-高性能脚本引擎：采用自研编译型脚本引擎替换解释型的jexl引擎；多个小脚本合并成大脚本；本地缓存实例；每个脚本单独ClassLoader，避免共用同一个ClassLoader导致脚本class无法被卸载。调整JIT codeCache出事大小和预留大小。
+高性能脚本引擎：采用自研编译型脚本引擎替换解释型的jexl引擎（提前触发JIT编译）；多个小脚本合并成大脚本；本地缓存实例；每个脚本单独ClassLoader，避免共用同一个ClassLoader导致脚本class无法被卸载。调整JIT codeCache初始大小和预留大小。
 写计算：对于实时性要求高的场景，复合特征的计算由查询时计算调整为写入式计算。（以空间换时间）
 #### 高可用
 优先级：设置线程priority优先级属性，实现不同业务的处理优先级。
