--- a/document/src/doc/java/分布式中间件.md
+++ b/document/src/doc/java/分布式中间件.md
@@ -88,7 +88,8 @@ commitLog日志文件：保存消息完整内容，broker上所有topic公用一
 ConsumeQueue：每个topic一个，保存消息实际保存在CommitLog.offset位置；消息的tag。
 indexFile：保存消息的ID，通过ID查找消息时。
 offsettable.offset：ConsumeQueue的消费进度，保存在json配置文件。
-### 对比RocketMQ### 顺序：
+### 对比RocketMQ
+### 顺序消息：
 producer：客户端在发送的时候使用单线程，根据queue选择器和排序id，把有顺序关系的消息都发送到同一个queue上。
 broker：客户端采用同步发送消息，broker收到消息后，顺序写入commitLog文件，保证消息在文件中是有序。
 consumer：1.同一个queue只允许一个consumer消费；2.消息到达consumer后回被放进缓存队列，consumer增加了互斥锁，同一时间同一个queue只会有一个线程在处理；
@@ -100,8 +101,10 @@ consumer：1.同一个queue只允许一个consumer消费；2.消息到达consume
  broker收到commit指令，则根据消息key从预提交队列移除消息，重新正式写入commitLog。收到rollback指令，则从预提交队列移除消息。
  broker重试未收到producer指令，会定时重试调用Producer.checkLocalTransaction，根据producer的事务状态决定commit或rollback。
 
-### 重试：RocketMQ有重试队列和死信队列，支持失败重试机制；kafka不支持
-延时消息：1.producer修改topic名称以及队列信息（根据延时级别决定发送到哪个级别的延时队列（18个level））；2.根据队列信息，转发到对应的延时Queue；3.延时服务后台线程消费延时Queue里的消息，改回真实的TOPIC；4.重新提交消息，写入commitLog；5. 把消息投递到对应的consumer Queue；  
+### 重试：
+RocketMQ有重试队列和死信队列，支持失败重试机制；kafka不支持
+### 延时消息
+1.producer修改topic名称以及队列信息（根据延时级别决定发送到哪个级别的延时队列（18个level））；2.根据队列信息，转发到对应的延时Queue；3.延时服务后台线程消费延时Queue里的消息，改回真实的TOPIC；4.重新提交消息，写入commitLog；5. 把消息投递到对应的consumer Queue；  
 
 消息查询：RocketMQ支持根据key查询消息内容，kafka不支持
 消息回溯：RocketMQ支持按时间回溯；kafka支持offset回溯；
@@ -128,10 +131,14 @@ kafka：大数据日志场景功能丰富、兼容性好、性能高；适合日
 分布式数据分片关系型数据库中间件。使用客户端jar包直连数据库，在JDBC层提供的额外服务。完全兼容JDBC规范。
 
 ## 分布式事务
-
+基于可靠消息的最终一致性方案
+依赖支持事务的分布式消息系统RocketMQ：发送消息；确认消息或取消消息；消息数据独立存储，独立伸缩，降低业务系统和消息系统之间的耦合；对消息系统的可靠性和实时性要求较高。
+TCC事务补偿型方案
+由独立的业务活动管理器负责事务的管理，统一进行confirm或cancel操作，失败保存日志，并一直重试，直到成功为止。
 
 #### 服务发现与治理
 zookeeper（1.provider启动时在接口providers目录下创建临时子节点，写入自己的IP和端口；2.consumer启动时，订阅接口providers目录下所有子节点，并根据子节点信息解析提供者；consumer在接口consumers目录下创建临时子节点，写入自己的URL地址；3.增加提供者时，providers下面创建新临时子节点，zookeeper会推送节点信息给consumer；4.provider出现故障或下线时，由于临时节点与session有关，改临时节点会被自动删除；5.zookeeper宕机之后，服务提供者信息保存在内存和本地文件，无法感知到提供者变更
+Eureka（AP）若服务集群出现分区故障时，Eureka会转入自动保护模式，允许分区故障的节点继续提供服务；若分区故障恢复，集群中其他分区会把他们的状态再次同步回来。
 #### 分布式ID生成器
 雪花算法64bit（41位，用来记录时间戳（毫秒），10位用来记录工作机器id（5位datacenterId 和 5位workerId），12位，序列号，用来记录同毫秒内产生的不同id）。
 时钟回拨问题：1.抛异常；2.等待；3.设计时钟回拨位，发生回拨时+1。美团leaf（zookeeper生成workid，并缓存在本地；定时上报机器时间到zk，重启时保证当前机器时间>zk保存时间；RPC访问其他机器时间，偏差大则启动失败。1.关闭NTP机器时间同步。2.出现时钟重播时，返回异常、等待重试或下线该节点）。
