--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -1,13 +1,21 @@
 ## 设计原则
-服务拆分：
+服务拆分：单一职责（业务领域、通用功能）、服务粒度适中、考虑团队结构、以业务模型切入、演进式拆分、避免环形依赖和双向依赖
 服务无状态：服务处理结果跟运行环境无关，确保系统扩展性
 接口幂等：同一个业务请求多次调用的结果等同于一次调用。可通过唯一ID、业务状态、禁止retry等方式解决。
 安全回滚：在异常处理时，除了数据库事务回滚，还需要回滚计数器、消息数据等。
 策略可定义：所有策略可以在线上新增、修改、作废、过期。
 尽量异步：非核心流程采用异步方式处理。消息异步、日志异步、生产者消费者异步、多线程异步、
-可关闭可回滚；
+
+设计模式
+观察者模式：消费者不需要等待结果，通过注册一个观察者，当结果完成后，由观察者通知消费者。
+责任链模式：将所有复合Filter接口的实现串连起来，添加新功能时，只需要实现接口并加入责任链即可，方便扩展。
+适配器模式：通过适配器模式，将原本不复合规范（或不能直接使用）的组件进行包装，使其复合规范。比如日志框架slf4j。
+代理模式:静态代理和动态代理，JDK动态代理（接口）和CGLIB动态代理。
+
 
 ## DDD领域驱动设计
+关注业务领域（边界，领域对象和功能）
+相反：关注数据和方法过程。
 
 https://baijiahao.baidu.com/s?id=1688916329743913023&wfr=spider&for=pc
 https://www.pianshen.com/article/5554360927/
@@ -64,5 +72,6 @@ sync->Future->callback->CompletableFuture
 
 
 ### 建设方向
+风险预警：
 模型效果评估：解决传统模型效果评估周期长（开发、上线、观察、分析）的难题，通过对线上流量和特征进行回放，收集模型命中结果数据与预期进行实时对比分析，快速发现模型缺陷并进行迭代。
 动态对接风控系统：解决风控被动对接业务系统存在遗漏和延迟的问题，通过代码注入的方式在业务系统关键点加入风控数据采集和逻辑判断代码，主动发现和管控业务风险。
