--- a/document/src/doc/java/分布式中间件.md
+++ b/document/src/doc/java/分布式中间件.md
@@ -149,6 +149,12 @@ redlock：在2N+1台机器上，同时执行上面逻辑，N+1台机器执行成
 #### 分布式限流
 guava ratelimiter：next（上一次取数的终止时间点）speed（频率每秒） maxPermits(最大申请量)。1.(current-next)*speed表示当前桶令牌数；2.如果桶令牌数小于permit，可以预支，next为预支后的时间点；3.next>current表示已经预支，当前不可获取。
 分布式限流：基于redis实现，把ratelimiter的逻辑通过redis lua脚本实现。
+#### 本地缓存
+LRU:如果数据最近被访问过，那么将来被访问的几率也更高。根据数据的历史访问时间来进行淘汰数据。linkedList+HashMap实现LRU，或LinkedHashMap实现。实现简单，容易被批量查询污染。
+LRU-K（LRU-2）：缓存最近使用过K次的数据，淘汰小于K次的数据。降低了“缓存污染”带来的问题，命中率比LRU要高。历史队列linkedList+LRU缓存队列。linkedList保存小于K的数据，附加最后访问时间和最近访问次数。实际应用中LRU-2是综合各种因素后最优的选择。
+Two queues(2Q)：其实是LRU-2的一个实现版本。并且2Q的历史队列是采用FIFO的方法进行缓存的。
+Muti Queue(MQ)：MQ算法其实是2Q算法的一个扩展。根据访问频率将数据划分为多个队列，不同的队列具有不同的访问优先级。成本较大。
+
 
 
 # 微服务系统设计
