--- a/document/src/doc/java/线上问题.md
+++ b/document/src/doc/java/线上问题.md
@@ -13,7 +13,7 @@ jmap （分析类实例和空间占用，jmap -dump 堆内存快照到文件） 
 短命大对象和数组；大循环创建对象；大批量处理数据；强引用缓存集合；长时间占用对象。
 
 内存泄漏
-Threadlocal泄漏
+### Threadlocal泄漏
 
 
 ### 内存问题排查：
