--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -6,11 +6,15 @@
 策略可定义：所有策略可以在线上新增、修改、作废、过期。
 尽量异步：非核心流程采用异步方式处理。消息异步、日志异步、生产者消费者异步、多线程异步、
 
-设计模式
+## 设计模式
+工厂模式：Spring使用工厂模式，通过BeanFactory和ApplicationContext来创建对象。
+单例模式：Bean默认为单例模式。
+策略模式：例如Resource的实现类，针对不同的资源文件，实现了不同方式的资源获取策略。
+代理模式:静态代理和动态代理，JDK动态代理（接口）和CGLIB动态代理。
+模板方法：可以将相同部分的代码放在父类中，而将不同的代码放入不同的子类中，用来解决代码重复的问题。比如RestTemplate, JmsTemplate, JpaTemplate。
 观察者模式：消费者不需要等待结果，通过注册一个观察者，当结果完成后，由观察者通知消费者。
 责任链模式：将所有复合Filter接口的实现串连起来，添加新功能时，只需要实现接口并加入责任链即可，方便扩展。
 适配器模式：通过适配器模式，将原本不复合规范（或不能直接使用）的组件进行包装，使其复合规范。比如日志框架slf4j。
-代理模式:静态代理和动态代理，JDK动态代理（接口）和CGLIB动态代理。
 
 
 ## DDD领域驱动设计
