--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -79,3 +79,18 @@ sync->Future->callback->CompletableFuture
 
 模型效果评估：解决传统模型效果评估周期长（开发、上线、观察、分析）的难题，通过对线上流量和特征进行回放，收集模型命中结果数据与预期进行实时对比分析，快速发现模型缺陷并进行迭代。
 动态对接风控系统：解决风控被动对接业务系统存在遗漏和延迟的问题，通过代码注入的方式在业务系统关键点加入风控数据采集和逻辑判断代码，主动发现和管控业务风险。
+
+无阻塞模式（IO密集型应用）  减少上下文切换以及线程阻塞唤醒调度
+同步 -> 异步阻塞(future) -> 异步非阻塞(callback) -> 
+**CompletableFuture**:异步流程控制。实现了Future和CompletionStage接口，实现非常复杂的异步计算工作。底层还是通过线程池去异步执行，通过阻塞等方式通信。
+**Spring5 WebFlux、Reactor**等事件驱动响应式编程框架：使用发布者 – 订阅者方式来解决传统编程同步阻塞、回调地狱；编程思维方式难转变，没有堆栈不便于调试。
+**协程(Coroutine)**：Kotlin、Quasar等轻量级线程。同步的编程方式达到或接近于纯异步的性能，而没有异步带来的Callback hell。 fiber blocking可以达到比thread blocking大几个数量级的并发度，更有效的利用CPU资源(运行fiber的worker线程并没有block)
+通过字节码修改技术在编译或载入时织入必要的上下文保存/恢复代码，通过抛异常来暂停，恢复的时候根据保存的上下文(Continuation),恢复jvm的方法调用栈和局部变量。对代码有一定的侵入。另外，还不支持DB、MQ等阻塞接口。
+**AJDK WISP**Java协程，与Quasar原理类似。号称完全兼容现有的Java代码，阿里巴巴双十一实践。多线程的IO密集的Java应用。
+**Project Loom**:异步编程最佳的实现方式(同步编程、异步执行)。是在JVM上实现轻量级的线程，并解除JVM线程与内核线程的一对一映射关系。避免线程阻塞、上下文等待。
+趋势：HTTP1.1短连接方式减少，直播、语音、视频、游戏、AR/VR等IO密集和流式应用场景需要更高的并发
+https://www.jianshu.com/p/5db701a764cb
+
+进程：一个运行的程序或代码就是一个进程。进程是系统进行资源分配的最小单位，进程拥有自己的内存空间，进程之间相互独立，所以进程间数据不共享，开销大，同一个进程中的所有线程共享资源。适合CPU密集计算。
+线程：操作系统调度执行的最小单位。不能独立存在，依赖进程的存在而存在，一个进程至少有一个线程，叫主线程，多个线程共享内存（数据共享和全局变量），因此提升程序的运行效率。IO密集型应用、CPU利用率低。
+协程：用户态的轻量级线程，调度由应用控制，操作系统不直接参与调度。拥有自己的寄存器上下文和栈，切换基本没有内核切换的开销，切换灵活。
