--- a/document/src/doc/java/系统设计.md
+++ b/document/src/doc/java/系统设计.md
@@ -1,4 +1,10 @@
 ## 设计原则
+稳定性
+安全性
+兼容性
+扩展性
+可维护性
+
 服务拆分：单一职责（业务领域、通用功能）、服务粒度适中、考虑团队结构、以业务模型切入、演进式拆分、避免环形依赖和双向依赖
 服务无状态：服务处理结果跟运行环境无关，确保系统扩展性
 接口幂等：同一个业务请求多次调用的结果等同于一次调用。可通过唯一ID、业务状态、禁止retry等方式解决。
@@ -26,7 +32,7 @@ https://www.pianshen.com/article/5554360927/
 ## 大数据实时风控平台设计（海量、高性能、实时）
 覆盖曹操出行全平台业务流程，登录注册、营销、订单、财务、派单等核心场景。通过规则策略+算法模型过风险和作弊行为进行实时识别和管控，取得很好的效果，严格口径下年挽回损失4000万。
 日活近千万，百万订单，亿级请求。
-压测环境红包活动场景下单机5万QPS。rt2ms。（频繁gc、CPU占用95%、load10+）
+压测环境红包活动场景下1万QPS。rt2ms。（频繁gc、CPU占用95%、load10+）
 ### 网关接入层（全异步非阻塞）
 风控系统对外网关，接口对接、请求隔离、限流、熔断、降级、参数校验、登录数据补全、接入管理（场景事件配置）（轻量、配置化、隔离）
 异步无阻塞网关：服务端异步执行AsyncContext+客户端异步调用+客户端事件通知实现异步网关
