--- a/document/src/doc/java/线上问题.md
+++ b/document/src/doc/java/线上问题.md
@@ -16,6 +16,26 @@ jmap （分析类实例和空间占用，jmap -dump 堆内存快照到文件） 
 ### Threadlocal泄漏
 
 
+### CPU占用分析 
+jps找到进程号,top -H -p pid 找到占用CPU高的线程，将线程号转换成16进制，jstack查看线程的堆栈。grep "java.lang.Thread.State" | sort -nr | uniq -c分析线程状态数量分布。多次重复，分析耗时高的方法堆栈。
+arths在线诊断工具，trace命令直接从上往下分析高耗时的方法调用。
+arths通过jvm底层开放的attachation机制，连接到目标jvm，然后再Instrument基础上没使用Transformer对应用字节码进行增强
+### 内存
+free命令  内存空间
+添加OOM时打Dump命令  -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/heapdump.hprof  在通过MAT等工具分析
+jmap -dump 在线打印内存dump；jmap -histo pid 在线分析对象实例数量及空间占用。
+### 频繁gc
+jstat -gc pid 1000命令来对gc分代变化情况进行观察。
+Survivor区、Eden区、老年代、元数据区的容量和使用量变化。YoungGc、FullGc的耗时和次数以及总耗时。如果看到gc比较频繁，再针对gc方面做进一步分析。
+youngGC频繁：短周期小对象较多；对象重复利用；调整-Xmn、-XX:SurvivorRatio大小。
+FullGC：增大内存；-XX:G1ReservePercent来增加预留内存百分比；调整并发标记线程数-XX:ConcGCThreads。程序不要主动执行System.gc()
+### 上下文切换
+ pidstat -w pid查看应用的切换频率
+### 磁盘
+df -hl 文件系统状态。空间大小，使用率
+iostatiostat -d -k -x 分析磁盘性能。读写速度。
+lsof -p pid具体文件读写。
+
 ### 内存问题排查：
 现象：应用接口查询间歇性超时，几个小时一次。
 分析：查看应用性能监控，cpu、load、网络、磁盘都正常，发现老年代持续增长，间歇性出现fullgc；
@@ -29,10 +49,6 @@ jmap （分析类实例和空间占用，jmap -dump 堆内存快照到文件） 
 **rt优先** 保障ygc不影响rt的情况下，尽量大年轻代，降低年轻代回收频率，减少老年代迁移。结合内存碎片、回收频率和回收时间等因素考虑。
 **吞吐量优先** 较大的年轻代和较小的老年代，尽早回收短期对象，减少中期对象，老年代存放长期对象。
 
-### CPU占用分析 
-jps找到进程号,top -H -p pid 找到占用CPU高的线程，将线程号转换成16进制，jstack查看线程的堆栈。多次重复，分析耗时高的方法堆栈。
-arths在线诊断工具，trace命令直接从上往下分析高耗时的方法调用。
-arths通过jvm底层开放的attachation机制，连接到目标jvm，然后再Instrument基础上没使用Transformer对应用字节码进行增强
 
 ### 应用假死
 现象：应用启动超时，线程假死。
